# RL_v_Heuristic_Singularity

./: .gitignore  README.md  RL_pipeline.ipynb  pyproject.toml  rl_pipeline.ipynb
scripts/: evaluate.py  replay_ui.py  train.py
src/rl_matrix/: __init__.py  agent.py  environment.py  heuristics.py  pipeline.py
